--- a/develop/css/main.css
+++ b/develop/css/main.css
@@ -848,6 +848,10 @@ video {
   font-family: Inter, "sans-serif";
 }
 
+.font-deca {
+  font-family: "Lexend Deca", "sans-serif";
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
