--- a/develop/css/main.css
+++ b/develop/css/main.css
@@ -679,7 +679,7 @@ video {
 }
 
 .bg-stats-image-mobile {
-  background-image: url('/develop/assets/images/image-header-mobile.jpg');
+  background-image: url('../develop/assets/images/image-header-mobile.jpg');
 }
 
 .bg-contain {
@@ -801,6 +801,10 @@ video {
 
   .xl\:rounded-bl-none {
     border-bottom-left-radius: 0px;
+  }
+
+  .xl\:bg-stats-image-desktop {
+    background-image: url('../develop/assets/images/image-header-desktop.jpg');
   }
 
   .xl\:bg-cover {
